# cppsp1explorations

./: .gitignore  .gitmodules  README.md
cpp_sp1_attempts/: README.md
cpp_sp1_attempts/fib_cpp_project/: CMakeLists.txt  fib.cpp
cpp_sp1_attempts/fib_cpp_project/cmake/toolchains/: sp1_zkvm.cmake
cpp_sp1_attempts/program/: Cargo.toml  build.rs
cpp_sp1_attempts/program/cmake/toolchains/: sp1_zkvm.cmake
cpp_sp1_attempts/program/src/: fib.cpp  main.rs
cpp_sp1_attempts/script/: Cargo.toml  build.rs
silk_st_sp1/: README.md
silk_st_sp1/program/: Cargo.toml  build copy.rs.bck  build.rs  riscv32-baremetal
silk_st_sp1/program/src/: atomic_stubs.c  fib.cpp  main.rs  wrapper copy.cpp  wrapper.cpp
silk_st_sp1/program/src/guest/: crt0.S  linker.ld  syscalls.c
silk_st_sp1/program/src/include/: fib.h  stub_gthread_cond.hpp  wrapper.hpp
silk_st_sp1/script/: Cargo.toml  build.rs
silk_st_sp1/script/guest/: mainifest.json
templibs/: libstdc++.a-gdb.py  libstdc++.la  libstdc++exp.la  libsupc++.la
templibs/gmp/: config.h  gmp.h  libgmp.lai  libgmpxx.lai
templibs/ldscripts/: elf32briscv.x  elf32briscv.xbn  elf32briscv.xc  elf32briscv.xce  elf32briscv.xe  elf32briscv.xn  elf32briscv.xw  elf32briscv.xwe  elf32lriscv.x  elf32lriscv.xbn  elf32lriscv.xc  elf32lriscv.xce  elf32lriscv.xe  elf32lriscv.xn  elf32lriscv.xw  elf32lriscv.xwe  elf64briscv.x  elf64briscv.xbn  elf64briscv.xc  elf64briscv.xce  elf64briscv.xe  elf64briscv.xn  elf64briscv.xw  elf64briscv.xwe  elf64lriscv.x  elf64lriscv.xbn  elf64lriscv.xc  elf64lriscv.xce  elf64lriscv.xe  elf64lriscv.xn  elf64lriscv.xw  elf64lriscv.xwe
try_zrusk/bare_metal/: hello  hello.cpp  start.S
try_zrusk/rust_wrapper_basic_fib/: Cargo.toml  build.rs
try_zrusk/rust_wrapper_basic_fib/cpp/: fib.cpp  fib.h
try_zrusk/rust_wrapper_basic_fib/src/: main.rs
try_zrusk/wrapped_fib_sp1/program/: Cargo.toml  build.rs
try_zrusk/wrapped_fib_sp1/program/cpp/: fib.c  fib.h
try_zrusk/wrapped_fib_sp1/program/src/: main.rs
try_zrusk/wrapped_fib_sp1/script/: build.rs
wrapped_fib_c/: Cargo.toml  README.md
wrapped_fib_c/program/: Cargo.toml  build.rs
wrapped_fib_c/program/cpp/: fib.c  fib.h
wrapped_fib_c/program/src/: lib.rs  main.rs
wrapped_fib_c/script/: Cargo.toml
