[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"


[dependencies]
alloy-sol-types = { workspace = true }
cxx = "1.0.160"                 # runtime bridge
#sp1-zkvm = "5.0.8"

[dependencies.libm]
version = "0.2.15"
default-features = false

[dependencies.sp1-zkvm]
version = "5.0.8"


[build-dependencies]
cxx-build = "1.0.160"           # build-time codegen & C++ compilation
cc = "1.2.29"
