[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "5.0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
dotenv = "0.15.0"
cxx = "1.0.160"                 # runtime bridge

[dependencies.libm]
version = "0.2.15"
default-features = false

[dependencies.sp1-zkvm]
version = "5.0.8"
default-features = false


[build-dependencies]
sp1-build = "5.0.8"
cxx-build = "1.0.160"           # build-time codegen & C++ compilation
